# smp-importer

./: Dockerfile  README.md  pyproject.toml  requirements.txt  run.sh
.github/workflows/: build.yml
src/smp_importer/: app.py  fixtures.py  importer.py  logic.py  model.py  rdf_helper.py  test.py
src/smp_importer/mapping/: chapter_1.py  chapter_6.py  chapter_7.py
src/smp_importer/static/: script.js  style.css
src/smp_importer/templates/: index.html.j2
